# fastpki

./: .env.example  CHANGELOG.md  CLAUDE.md  Makefile  README.md  codecov.yml  pyproject.toml  zensical.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  docs.yml  release-drafter.yml
alembic/versions/: 230cb721bce9_add_service_accounts_tokens_and_cert_ca_.py  38722803ba15_add_issuance_policies.py  c7d99ce53025_add_certificate_renewal_lineage_and_csr_.py  d968617a7e2f_add_missing_auditaction_enum_values.py
app/: main.py
app/api/: __init__.py  ca.py  certs.py  deps.py  export.py  service_accounts.py  users.py
app/core/: config.py
app/db/: models.py
app/schemas/: ca.py  cert.py  service_account.py
app/services/: audit.py  ca.py  cert.py  encryption.py  exceptions.py  issuance_policy.py  permission.py  principal.py  service_account.py
cli/: __init__.py  ca.py  cert.py  service_account.py
docs/development/: versioning.md
docs/getting-started/: configuration.md  installation.md
docs/guides/: issuance-policies.md  organizations.md  renewing-certificates.md  service-accounts.md
docs/reference/: api.md  cli.md  configuration.md  models.md
docs/specs/: 2026-04-14-cert-manager-provisioning-roadmap.md  2026-06-08-service-accounts-phase1-spec.md
scripts/: lint.sh
tests/: conftest.py
tests/test_api/: test_ca_assign_org.py  test_ca_permissions.py  test_cert_permissions.py  test_certificate_renewal_api.py  test_export_permissions.py  test_issuance_policy_enforcement.py  test_org_admin_user_flows.py  test_principal_resolution.py  test_provisioning_coverage.py  test_security.py  test_service_account_issuance.py  test_service_accounts.py  test_sign_csr.py  test_user_capabilities.py  test_users.py
tests/test_services/: test_ca_assign_org.py  test_ca_encryption.py  test_certificate_renewal.py  test_issuance_policy.py  test_permission_service.py  test_principal_permissions.py  test_provisioning_coverage.py  test_service_account_service.py  test_service_account_tokens.py
